Fixed margins of modals and scrollbars

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -971,7 +971,7 @@ a:hover {
   max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  margin-top: 25px;
   padding-bottom: 50px;
   filter: drop-shadow(0px 0px 10px #0000005a);
   border-radius: var(--cornerSize);
@@ -981,7 +981,7 @@ a:hover {
   border-style: solid;
 
   &.comments {
-    margin-top: 800px;
+    margin-top: 775px;
     right: 0px;
     width: 600px;
     font-size: 16px;
@@ -1216,7 +1216,7 @@ a:hover {
     padding-bottom: 50px;
 
     &.comments {
-      margin-top: 600px;
+      margin-top: 475px;
     }
   }
 
