--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,55 +1,59 @@
-
-
 /*=================================FONT STUFF================================*/
 
 
 @font-face {
   font-family: sfProDisplay;
-  font-weight:bold;
+  font-weight: bold;
   src: url("../assets/fonts/SFPRODISPLAYBOLD.OTF") format("opentype");
 }
 
 @font-face {
   font-family: sfProDisplay;
-  font-weight:medium;
+  font-weight: medium;
   src: url("../assets/fonts/SFPRODISPLAYMEDIUM.OTF") format("opentype");
 }
+
 @font-face {
   font-family: sfProDisplay;
-  font-weight:bolder;
+  font-weight: bolder;
   src: url("../assets/fonts/SFPRODISPLAYBLACKITALIC.OTF") format("opentype");
 }
+
 @font-face {
   font-family: sfProDisplay;
-  font-weight:normal;
+  font-weight: normal;
   src: url("../assets/fonts/SFPRODISPLAYREGULAR.OTF") format("opentype");
 }
 
 @font-face {
   font-family: sfMono;
-  font-weight:bold;
+  font-weight: bold;
   src: url("../assets/fonts/SFPRODISPLAYBOLD.OTF") format("opentype");
 }
 
 @font-face {
   font-family: sfMono;
-  font-weight:medium;
+  font-weight: medium;
   src: url("../assets/fonts/SFPRODISPLAYMEDIUM.OTF") format("opentype");
 }
+
 @font-face {
   font-family: sfMono;
-  font-weight:bolder;
+  font-weight: bolder;
   src: url("../assets/fonts/SFPRODISPLAYBLACKITALIC.OTF") format("opentype");
 }
+
 @font-face {
   font-family: sfMono;
-  font-weight:normal;
+  font-weight: normal;
   src: url("../assets/fonts/SFMONO/SFMONOREGULAR.otf") format("opentype");
 }
+
 @font-face {
   font-family: Eretro;
   src: url("../assets/fonts/Eretro.ttf") format("truetype");
 }
+
 ::-moz-selection {
   color: var(--accentColor);
   background: #362929;
@@ -60,53 +64,56 @@
   background: #362929;
 }
 
-.logo{
+.logo {
   font-family: 'sfProDisplay';
   font-weight: bolder;
   transition: 1s;
   font-size: 25px;
   width: 80px;
 }
-.logo:hover{
+
+.logo:hover {
   color: var(--accentColor);
   transition: 1s;
   cursor: pointer;
 }
 
-.text-justify{
+.text-justify {
   text-align: justify;
 }
 
-.content-padding{
+.content-padding {
   padding: 15px;
 }
 
 
-.creditsText{
-  color:#ffffff1f;
+.creditsText {
+  color: #ffffff1f;
   font-size: 14px;
 }
 
 
-.logError{
-background-image: url(../assets/log/logError.png);
-}
-.logWarning{
-background-image: url(../assets/log/logWarning.png);
-}
-.logInfo{
-background-image: url(../assets/log/logInfo.png);
+.logError {
+  background-image: url(../assets/log/logError.png);
 }
 
-.logIcon{
-background-color: rgba(255, 0, 0, 0);
-height: 25px;
-width: 4%;
-background-position: center;
-background-repeat: no-repeat;
-background-size: 18px;
-margin-right: 5px;
-margin-left: 5px;
+.logWarning {
+  background-image: url(../assets/log/logWarning.png);
+}
+
+.logInfo {
+  background-image: url(../assets/log/logInfo.png);
+}
+
+.logIcon {
+  background-color: rgba(255, 0, 0, 0);
+  height: 25px;
+  width: 4%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 18px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 hr {
@@ -118,14 +125,15 @@ hr {
   padding: 0;
 }
 
-.primary{
+.primary {
   color: var(--primaryText);
 }
-.secondary{
-  color:var(--secondaryText);
+
+.secondary {
+  color: var(--secondaryText);
 }
 
-.edit{
+.edit {
   color: rgba(0, 0, 0, 0);
   background-image: url(../assets/edit.png);
   background-position: center;
@@ -134,37 +142,71 @@ hr {
   position: absolute;
   left: 0px;
 }
-.edit:active{
+
+.edit:active {
   color: rgba(0, 0, 0, 0);
 }
 
-.overflowfix{
-  overflow: scroll;
+.overflowfix {
+  overflow-y: auto;
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 
 @keyframes fadeIn {
   from {
     background-color: rgba(0, 0, 0, 0);
   }
+
   to {
     background-color: rgba(0, 0, 0, 0.517);
   }
 }
 
-.fade-in{
+.fade-in {
   animation: fadeIn .25s forwards;
 }
